test/libsolidity/syntaxTests/literalSuffixes/application/invalid_suffixed_conversion.sol
function suffix(uint value) pure suffix returns (uint) { return value; }

contract C {
    int x = int(1000) suffix;
}
// ----
// ParserError 2314: (109-115): Expected ';' but got identifier
